--- a/soccer.html
+++ b/soccer.html
@@ -96,37 +96,37 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Al Ittifaq vs Al Nassr</a>
-<td>December 30, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 08:30:00" data-start="December 30, 2025 09:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Blackburn Rovers vs Wrexham</a>
+<td>January 01, 2025 04:30 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 03:30:00" data-start="January 01, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Burnley vs Newcastle United</a>
-<td>December 30, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 10:30:00" data-start="December 30, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Wycombe Wanderers vs Cardiff City</a>
+<td>January 01, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Nottingham Forest vs Everton</a>
-<td>December 30, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 10:30:00" data-start="December 30, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Birmingham</a>
+<td>January 01, 2025 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">West Ham vs Brighton</a>
-<td>December 30, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 10:30:00" data-start="December 30, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield United vs Leicester City</a>
+<td>January 01, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Chelsea vs Bournemouth</a>
-<td>December 30, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 10:30:00" data-start="December 30, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Liverpool vs Leeds United</a>
+<td>January 01, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Motherwell vs Celtic</a>
-<td>December 30, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 11:00:00" data-start="December 30, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Fulham</a>
+<td>January 01, 2025 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Arsenal vs Aston Villa</a>
-<td>December 30, 2025 12:15 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 11:15:00" data-start="December 30, 2025 12:15:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Brentford vs Tottenham</a>
+<td>January 01, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 11:00:00" data-start="January 01, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Manchester United vs Wolves</a>
-<td>December 30, 2025 12:15 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 11:15:00" data-start="December 30, 2025 12:15:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Sunderland vs Manchester City</a>
+<td>January 01, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 02, 2025 11:00:00" data-start="January 01, 2025 12:00:00"></span></td>
 <tr>
 </tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
