--- a/fighting.html
+++ b/fighting.html
@@ -102,6 +102,12 @@
 <td>December 31, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="December 31, 2025 17:00:00"></span></td>
 </tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 02, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 02, 2025 17:00:00"></span></td>
+</tr>
+<tr>
 </tbody>
 </table>
 </div>
