--- a/motorsports.html
+++ b/motorsports.html
@@ -97,22 +97,17 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/floracing-1">Kubota High Limit Racing - Prelim Night 1</a></td>
-<td>December 28, 2025 01:00 AM</td>
-<td><span class="countdown-timer" data-end="December 28, 2025 13:00:00" data-start="December 28, 2025 01:00:00"></span>
+<td><a href="https://roxiestreams.live/f1-streams">Formula E - Grand Prix</a></td>
+<td>January 10, 2025 12:05 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2025 13:00:00" data-start="January 10, 2025 12:05:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.live/floracing-1">Kubota High Limit Racing - Prelim Night 2</a></td>
-<td>December 29, 2025 01:00 AM</td>
-<td><span class="countdown-timer" data-end="December 29, 2025 13:00:00" data-start="December 29, 2025 01:00:00"></span>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross - Race</a></td>
+<td>January 10, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2025 13:00:00" data-start="January 10, 2025 16:30:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.live/floracing-1">Kubota High Limit Racing - Race</a></td>
-<td>December 30, 2025 01:00 AM</td>
-<td><span class="countdown-timer" data-end="December 30, 2025 13:00:00" data-start="December 30, 2025 01:00:00"></span>
-</td>
-<tr>
-</tr></tr></tr></tr></tbody>
+</tbody>
 </table>
 </div>
 </div>
