--- a/soccer.html
+++ b/soccer.html
@@ -96,47 +96,49 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Blackburn Rovers vs Wrexham</a>
+<tbody>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Blackburn Rovers vs Wrexham</a></td>
 <td>January 01, 2026 04:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 03:30:00" data-start="January 01, 2025 04:30:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 06:30:00 AM" data-start="January 01, 2026 04:30:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Wycombe Wanderers vs Cardiff City</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Wycombe Wanderers vs Cardiff City</a></td>
 <td>January 01, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 09:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Birmingham</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Birmingham</a></td>
 <td>January 01, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 09:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield United vs Leicester City</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield United vs Leicester City</a></td>
 <td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Liverpool vs Leeds United</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Liverpool vs Leeds United</a></td>
 <td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Fulham</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Fulham</a></td>
 <td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 08:30:00" data-start="January 01, 2025 09:30:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Brentford vs Tottenham</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Brentford vs Tottenham</a></td>
 <td>January 01, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 11:00:00" data-start="January 01, 2025 12:00:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 02:00:00 PM" data-start="January 01, 2026 12:00:00 PM"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Sunderland vs Manchester City</a>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Sunderland vs Manchester City</a></td>
 <td>January 01, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2025 11:00:00" data-start="January 01, 2025 12:00:00"></span></td>
-</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 02:00:00 PM" data-start="January 01, 2026 12:00:00 PM"></span></td>
 </tr>
-<td></tbody></table></div>
+</tbody>
+<td></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
