--- a/nfl.html
+++ b/nfl.html
@@ -105,14 +105,13 @@
 <td>January 01, 2026 13:00 PM</td>
 <td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
 </td>
-
+</tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Ole Miss vs. 3 Georgia</a>
 <td>January 01, 2026 15:00 PM</td>
 <td><span class="countdown-timer" data-end="January 02, 2025 06:00:00" data-start="January 01, 2025 07:00:00"></span></td>
 </td>
-
-<tr>
-</tr></tbody></table></div>
+</tr>
+<tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
