--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html data-bs-theme="dark" lang="en">
 <head>
     <meta charset="utf-8"/>
+<meta name="bitmedia-site-verification" content="bdcd737c7b2c8da93f5004309a21642c" />
     <script async src="https://platform.foremedia.net/code/56212/analytics" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
