--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
 <meta name="bitmedia-site-verification" content="bdcd737c7b2c8da93f5004309a21642c" />
+<meta name="clckd" content="38add12595a9d574e48529da8462781e" />
     <script async src="https://platform.foremedia.net/code/56212/analytics" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
