--- a/soccer.html
+++ b/soccer.html
@@ -113,6 +113,11 @@
 <td><span class="countdown-timer" data-end="January 01, 2026 09:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Stevenage vs Plymouth</a></td>
+<td>January 01, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 09:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield United vs Leicester City</a></td>
 <td>January 01, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 01, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
