--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
+
 <html data-bs-theme="dark" lang="en">
 <head>
-    <meta charset="utf-8"/>
-<meta name="bitmedia-site-verification" content="bdcd737c7b2c8da93f5004309a21642c" />
-<meta name="clckd" content="38add12595a9d574e48529da8462781e" />
-    <script async src="https://platform.foremedia.net/code/56212/analytics" type="text/javascript"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
-    <meta name="description" content="Free PPV ufc, TV, NBA, NFL, and F1 streams"/>
-    <meta name="keywords" content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, stream, online, free, mrgamingstreams, f1, tv, nfl"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
-    <link rel="shortcut icon" type="x-icon" href="imgs/iconn.png"/>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
-    <script>
+<meta charset="utf-8"/>
+<meta content="bdcd737c7b2c8da93f5004309a21642c" name="bitmedia-site-verification"/>
+<meta content="38add12595a9d574e48529da8462781e" name="clckd"/>
+<script async="" src="https://platform.foremedia.net/code/56212/analytics" type="text/javascript"></script>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
+<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
+<script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-EQ3BHVQGMN');
     </script>
-    <style>
+<style>
         .navbar-brand {
             color: pink;
             font-size: 1.3rem;
@@ -136,81 +137,78 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-black">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- NHL SECTION ADDED alert with gold outline animation and link -->
-    <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
-        <span class="alert-icon">🏒</span>
-        <span class="nhl-gold-text">
+<nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+</div>
+</div>
+</nav>
+<!-- NHL SECTION ADDED alert with gold outline animation and link -->
+<div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
+<span class="alert-icon">🏒</span>
+<span class="nhl-gold-text">
             NHL SECTION 
-            <a href="https://roxiestreams.live/nhl" class="nhl-link">ADDED</a>
-        </span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+            <a class="nhl-link" href="https://roxiestreams.live/nhl">ADDED</a>
+</span>
+<button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
+</div>
+<!-- Discord alert kept as-is -->
+<div class="alert alert-danger alert-dismissible mt-2" role="alert">
+        We now have a Discord server. Enjoy! <a class="alert-link" href="https://discord.gg/JhkVmejRmn">Discord</a>
+<button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
+</div>
+<div class="mt-5">
+<h2 class="text-center" style="font-family: 'Kanit', sans-serif; font-weight: bold; color: #f8b8d0;">Upcoming Events</h2>
+<table id="eventsTable">
+<thead>
+<tr>
+<th>Event</th>
+<th>Start Time (PST)</th>
+<th>Countdown</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Bowls)</a></td>
+<td>January 01, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+<td>January 01, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/nba">NBA</a></td>
+<td>January 01, 2026 03:00 PM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 05:00:00 PM" data-start="January 01, 2026 03:00:00 PM"></span></td>
+</tr>
+</tr></tbody>
 
-    <!-- Discord alert kept as-is -->
-    <div class="alert alert-danger alert-dismissible mt-2" role="alert">
-        We now have a Discord server. Enjoy! <a href="https://discord.gg/JhkVmejRmn" class="alert-link">Discord</a>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-
-    <div class="mt-5">
-        <h2 class="text-center" style="font-family: 'Kanit', sans-serif; font-weight: bold; color: #f8b8d0;">Upcoming Events</h2>
-        <table id="eventsTable">
-            <thead>
-                <tr>
-                    <th>Event</th>
-                    <th>Start Time (PST)</th>
-                    <th>Countdown</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Bowls)</a></td>
-                    <td>December 31, 2025 11:30 AM</td>
-                    <td><span class="countdown-timer" data-start="December 31, 2025 11:30:00" data-end="December 31, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-                    <td>December 31, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 31, 2025 16:00:00" data-end="December 31, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">AEW</a></td>
-                    <td>December 31, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 31, 2025 17:00:00" data-end="December 31, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-            </tbody>
-        </table>
-    </div>
-    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-        <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-            <li class="nav-item"><a href="https://discord.gg/JhkVmejRmn" class="nav-link px-2 text-body-secondary">Stream Request (Discord)</a></li>
-        </ul>
-        <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2025</p>
-    </footer>
-
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/countdownn.js"></script>
+</table>
+</div>
+<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2025</p>
+</footer>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="scripts/countdownn.js"></script>
 </body>
 </html>
