--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@
 <tbody>
 <tr>
 <tr>
+<td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
+<td>January 01, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Bowls)</a></td>
 <td>January 01, 2026 09:00 AM</td>
 <td><span class="countdown-timer" data-end="January 01, 2026 11:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
@@ -199,7 +204,6 @@
 <td><span class="countdown-timer" data-end="January 01, 2026 05:00:00 PM" data-start="January 01, 2026 03:00:00 PM"></span></td>
 </tr>
 </tr></tbody>
-
 </table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
