--- a/darts.html
+++ b/darts.html
@@ -2,7 +2,6 @@
 <html lang="en" data-bs-theme="dark">
 <head>
 <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
@@ -170,11 +169,10 @@ function showPlayer(playerType, stream) {
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
-
 <script type="text/javascript">
-aclib.runPop({
-zoneId: '10754426',
-});
-</script></body>
+    aclib.runPop({
+        zoneId: '10754426',
+    });
+</script>
+</body>
 </html>
