--- a/nba.html
+++ b/nba.html
@@ -212,6 +212,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 02, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         San Antonio Spurs vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 02, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 4:00 PM:00" data-start="January 02, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Brooklyn Nets vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 02, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 4:00 PM:00" data-start="January 02, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Denver Nuggets vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 02, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 4:30 PM:00" data-start="January 02, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Atlanta Hawks vs New York Knicks
+        </a>
+       </td>
+       <td>
+        January 02, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 4:30 PM:00" data-start="January 02, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Orlando Magic vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 02, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Charlotte Hornets vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        January 02, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Portland Trail Blazers vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        January 02, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Sacramento Kings vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 02, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 6:00 PM:00" data-start="January 02, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Oklahoma City Thunder vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 02, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 7:00 PM:00" data-start="January 02, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Memphis Grizzlies vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 02, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 03, 2026 7:30 PM:00" data-start="January 02, 2026 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
