--- a/soccer.html
+++ b/soccer.html
@@ -98,52 +98,27 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Blackburn Rovers vs Wrexham</a></td>
-<td>January 01, 2026 04:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Al-Ahli vs Al Nassr</a></td>
+<td>January 01, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 04:30:00 AM" data-start="January 01, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Wycombe Wanderers vs Cardiff City</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Toulouse vs Lens</a></td>
+<td>January 01, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Milan</a></td>
+<td>January 01, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Rayo Vallecano vs Getafe</a></td>
 <td>January 01, 2026 07:00 AM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Birmingham</a></td>
-<td>January 01, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Stevenage vs Plymouth</a></td>
-<td>January 01, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield United vs Leicester City</a></td>
-<td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 09:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Liverpool vs Leeds United</a></td>
-<td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 09:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Fulham</a></td>
-<td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 09:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Brentford vs Tottenham</a></td>
-<td>January 01, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 12:00:00 PM" data-start="January 01, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Sunderland vs Manchester City</a></td>
-<td>January 01, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 12:00:00 PM" data-start="January 01, 2026 12:00:00 PM"></span></td>
-</tr>
-</tbody>
-<td></td></tr></tbody></table></div>
+</tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
