--- a/nhl.html
+++ b/nhl.html
@@ -134,6 +134,29 @@
             <td><a href="https://roxiestreams.live/nhl-streams-8">Nashville Predators vs Seattle Kraken</a></td>
             <td>January 01, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-02 19:00:00" data-start="2026-01-01 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, January 02, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Vegas Golden Knights vs St. Louis Blues</a></td>
+            <td>January 02, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-03 12:00:00" data-start="2026-01-02 12:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">New York Rangers vs Florida Panthers</a></td>
+            <td>January 02, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-03 17:00:00" data-start="2026-01-02 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Seattle Kraken vs Vancouver Canucks</a></td>
+            <td>January 02, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-03 19:30:00" data-start="2026-01-02 19:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Minnesota Wild vs Anaheim Ducks</a></td>
+            <td>January 02, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-03 19:30:00" data-start="2026-01-02 19:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
