--- a/soccer.html
+++ b/soccer.html
@@ -99,22 +99,22 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Al-Ahli vs Al Nassr</a></td>
-<td>January 01, 2026 09:30 AM</td>
+<td>January 02, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 04:30:00 AM" data-start="January 01, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Toulouse vs Lens</a></td>
-<td>January 01, 2026 11:45 AM</td>
+<td>January 02, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Milan</a></td>
-<td>January 01, 2026 11:45 AM</td>
+<td>January 02, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Rayo Vallecano vs Getafe</a></td>
-<td>January 01, 2026 07:00 AM</td>
+<td>January 02, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 02, 2026 07:00:00 AM" data-start="January 01, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
