--- a/nfl.html
+++ b/nfl.html
@@ -100,21 +100,27 @@
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Rice vs. Texas State</a></td>
 <td>January 01, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 11:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 02, 2026 09:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Navy vs. Cincinnati</a></td>
-<td>January 01, 2026 01:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 03:00:00 PM" data-start="January 01, 2026 01:00:00 PM"></span></td>
+<td>January 02, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Wake Forest vs. Mississippi State</a></td>
-<td>January 01, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 05:00:00 PM" data-start="January 01, 2026 05:00:00 PM"></span></td>
+<td>January 02, 2026 01:30 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 01:30:00 PM" data-start="January 02, 2026 01:30:00 PM"></span></td>
 </tr>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Wake Forest vs. Mississippi State</a></td>
+<td>January 02, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-2">Arizona vs. SMU</a></td>
-<td>January 01, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 05:00:00 PM" data-start="January 01, 2026 05:00:00 PM"></span></td>
+<td>January 02, 2026 05:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
 </tr>
 </tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
