--- a/index.html
+++ b/index.html
@@ -184,26 +184,32 @@
 <tbody>
 <tr>
 <tr>
+<td><a href="https://roxiestreams.live/nfl">NCAA (College Bowls)</a></td>
+<td>January 02, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-<td>January 01, 2026 04:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 11:00:00 AM" data-start="January 01, 2026 04:30:00 AM"></span></td>
+<td>January 02, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 11:30:00 AM" data-start="January 02, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">NCAA (College Bowls)</a></td>
-<td>January 01, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 11:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-<td>January 01, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 11:30:00 AM" data-start="January 01, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
+<td>January 02, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 01, 2026 03:00 PM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 05:00:00 PM" data-start="January 01, 2026 03:00:00 PM"></span></td>
+<td>January 02, 2026 16:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 04:00:00 PM"></span></td>
 </tr>
-</tr></tbody>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-strams">WWE Smackdown</a></td>
+<td>January 02, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+</tr></tr></tbody>
 </table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
