--- a/nfl.html
+++ b/nfl.html
@@ -99,18 +99,13 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Rice vs. Texas State</a></td>
-<td>January 01, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="January 02, 2026 09:00:00 AM" data-start="January 01, 2026 09:00:00 AM"></span></td>
+<td>January 02, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 09:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Navy vs. Cincinnati</a></td>
-<td>January 02, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Wake Forest vs. Mississippi State</a></td>
-<td>January 02, 2026 01:30 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 01:30:00 PM" data-start="January 02, 2026 01:30:00 PM"></span></td>
+<td>January 02, 2026 13:30 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 1:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">Wake Forest vs. Mississippi State</a></td>
