--- a/soccer.html
+++ b/soccer.html
@@ -98,23 +98,83 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Al-Ahli vs Al Nassr</a></td>
-<td>January 02, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Como vs Udinese</a></td>
+<td>January 03, 2026 03:30 AM</td>
 <td><span class="countdown-timer" data-end="January 03, 2026 09:30:00 AM" data-start="January 02, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Toulouse vs Lens</a></td>
-<td>January 02, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Aston Villa vs Nottingham Forest</a></td>
+<td>January 03, 2026 04:30 AM</td>
 <td><span class="countdown-timer" data-end="January 03, 2026 11:45:00 AM" data-start="January 02, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Milan</a></td>
-<td>January 02, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Celtic vs Rangers</a></td>
+<td>January 03, 2026 04:30 AM</td>
 <td><span class="countdown-timer" data-end="January 03, 2026 11:45:00 AM" data-start="January 02, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Rayo Vallecano vs Getafe</a></td>
-<td>January 02, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Celta De Vigo vs Valencia</a></td>
+<td>January 03, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Genoa vs Pisa</a></td>
+<td>January 03, 2026 06:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 09:30:00 AM" data-start="January 02, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Brighton vs Burnley</a></td>
+<td>January 03, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 09:30:00 AM" data-start="January 02, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Wolves vs West Ham</a></td>
+<td>January 03, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 09:30:00 AM" data-start="January 02, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Dundee United vs Dundee</a></td>
+<td>January 03, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 11:45:00 AM" data-start="January 02, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Osasuna vs Athletic Club</a></td>
+<td>January 03, 2026 07:15 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Juventus vs Leece</a></td>
+<td>January 03, 2026 09:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Bournemouth vs Arsenal</a></td>
+<td>January 03, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 09:30:00 AM" data-start="January 02, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Elche vs Villarreal</a></td>
+<td>January 03, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Estoril</a></td>
+<td>January 03, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Atalanta vs Roma</a></td>
+<td>January 03, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Espanyol vs Barcelona</a></td>
+<td>January 03, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Leones Negros UdeG vs Monterrey</a></td>
+<td>January 03, 2026 16:00 PM</td>
 <td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
